[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/knight-32px.png" type="Texture" id=1]
[ext_resource path="res://Fonts/LightFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://BackgroundResources/TextWindowViolet.tres" type="StyleBox" id=3]
[ext_resource path="res://Fonts/SmallFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scripts/VisualPanel/ItemInfoPanel.gd" type="Script" id=5]

[node name="ItemInfoPanel" type="PanelContainer"]
margin_top = 487.0
margin_right = 472.0
margin_bottom = 550.0
rect_min_size = Vector2( 0, 30 )
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 620.0
margin_bottom = 63.0

[node name="HBox" type="HBoxContainer" parent="MarginContainer"]
margin_right = 620.0
margin_bottom = 63.0
custom_constants/separation = 20

[node name="ItemIcon" type="TextureRect" parent="MarginContainer/HBox"]
margin_right = 40.0
margin_bottom = 63.0
rect_min_size = Vector2( 40, 0 )
texture = ExtResource( 1 )

[node name="NameVBox" type="VBoxContainer" parent="MarginContainer/HBox"]
margin_left = 60.0
margin_right = 260.0
margin_bottom = 63.0
rect_min_size = Vector2( 200, 0 )

[node name="NameLabel" type="Label" parent="MarginContainer/HBox/NameVBox"]
margin_right = 200.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
text = "Item Name Long"

[node name="IdLabel" type="Label" parent="MarginContainer/HBox/NameVBox"]
margin_top = 31.0
margin_right = 200.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 4 )
text = "Item ID"

[node name="DescriptionLabel" type="Label" parent="MarginContainer/HBox"]
margin_left = 280.0
margin_right = 480.0
margin_bottom = 63.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Description - Custom text of type and Usevalue"
autowrap = true

[node name="SellPriceLabel" type="Label" parent="MarginContainer/HBox"]
margin_left = 500.0
margin_top = 18.0
margin_right = 620.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
text = "Sell Price"
